<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/upLineTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#BFBFBF"
            android:gravity="bottom|end"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textAlignment="textEnd"
            android:textSize="24sp"
            android:visibility="visible"
            tools:ignore="NestedWeights"
            tools:text="123 + " />

        <TextView
            android:id="@+id/bottomLineTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#BFBFBF"
            android:paddingStart="5dp"
            android:paddingEnd="15dp"
            android:textAlignment="textEnd"
            android:textColor="@color/black"
            android:textSize="65sp"
            tools:text="999999999" />

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:padding="5dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/ce_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/ce_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp" />

            <Button
                android:id="@+id/c_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/c_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/bs_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/bs_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/division_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/division_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />


        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_7_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_7_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_8_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_8_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_9_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_9_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/multiplication_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/multiplication_buttonText"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_4_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_4_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_5_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_5_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_6_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_6_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/subtraction_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/subtraction_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/number_1_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_1_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_2_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_2_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_3_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_3_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/addition_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/addition_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/addOrSub_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/addOrSub_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/number_0_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#EEEEEE"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/number_0_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/dot_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/dot_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/equal_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#BFBFBF"
                android:insetLeft="5dp"
                android:insetTop="5dp"
                android:insetRight="5dp"
                android:insetBottom="5dp"
                android:text="@string/equal_buttonText"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:cornerRadius="1dp"
                style="?android:attr/buttonBarButtonStyle" />


        </TableRow>

    </TableLayout>

</LinearLayout>